# tgbot

./: .gitignore  Dockerfile  README.md  initialize_bot.py  main.py  pyproject.toml  users.db
bot/: __init__.py  __main__.py
bot/constants/: enviroment.py  schedule.py  sql_requests.py
bot/db/: __init__.py  db.py
bot/handlers/: __init__.py
bot/handlers/menu/: donate.py  help_handler.py  joke.py  menu.py  null.py  start.py
bot/handlers/schedule/: blueprints.py  schedule.py
bot/keyboards/: __init__.py  config_kb.py  menu_kb.py  schedule_kb.py
bot/logger/: __init__.py  logger.py
bot/schedule/: __init__.py  schedule.py
bot/utils/: __init__.py  http.py  parity.py
botrayado/database/: db.py
botrayado/database/db/: users.db
botrayado/handlers/: __init__.py  _help.py  admin.py  aliases.py  config.py  donate.py  headman.py  joke.py  menu.py  null.py  schedule.py  start.py
botrayado/keyboards/: __init__.py  admin_kb.py  config_kb.py  headman_kb.py  menu_kb.py  schedule_kb.py  special_blueprints_kb.py
botrayado/schedule/: sheethandler.py  whataweek.py
botrayado/utils/: constants.py  logger.py
handlers/: __init__.py  _help.py  commands_slash.py  config.py  donate.py  joke.py  menu.py  null.py  schedule.py  start.py
keyboards/: __init__.py  config_kb.py  menu_kb.py  schedule_kb.py
schedule/: blueprint.py  sheethandler.py  whataweek.py
utils/: aiohttp_requests.py  constants.py  constants_handlers.py  sqlite_requests.py
