[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = ""
authors = ["darttusin <ivanchepikov444@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
aiogram = "^2.19"
aiohttp = "^3.8.1"
transliterate = "^1.10.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
